--- a/new.html/Resume.html
+++ b/new.html/Resume.html
@@ -15,7 +15,25 @@
         <li> Sri Krishnadevaraya University college Of Engineering and Technology, Ananthapur BTech in Computer Science and Engineering, with 79% in 2024</li> 
         <li>Govt Polytechnic for Women, Kadapa Diploma in Computer Science & Engineering, with 86%  in 2021</li>   
         <li>SSC Board in Sri Nagarjuna High School, N.P.Kunta CGPA 9.7 in  2018.</li>
-    </ul>     
+    </ul>  
+    <hr><b>INTERNSHIPS</b><hr>   
+    <ul>
+        <strong>LYFAUX TECHNOLOGY PVT LTD, Bengaluru(2023)</strong><br>
+        <b>CYBER SECURITY :</b>
+        <li>Cyber Security is considered as appropriate means of Cyber Crime, Cyber risk, and awareness to absorb financial impact caused by computer security branches.</li>
+        <li>Gain hands-on experience in identifying and mitigating digital threats, understanding encryption techniques, network data and other attack artifacts.</li>
+        <strong>NEXUS INFO PVT LTD,Coimbatore,Tamil Naidu(2024)</strong><br>
+        <b>WEB DEVELOPMENT:</b>
+        <li>I have experience in developing and maintaining web applications using HTML,CSS and JavaScript. It’s been a passion of mine to create user-friendly and visually appearing websites.</li>
+        <li>Designed user interface elements such as buttons,forms,menus,and navigation bars.</li>
+    </ul>
+    <hr><b>PROJECTS</b><hr>
+    <ul>
+        <p>Title: Cardiovascular Disease Prediction Using Machine Learning(2024)</p>
+        <p>Description:</p>
+        <li>In Cardiovascular disease prediction using machine learning project we are predicting heart disease using machine learning techniques.</li>
+        <li>We can use machine learning techinques like Classification algorithms such as Random forest, Decision tree and Support vector machine by using these algorithms we can get above 80% Accuracy.</li>
+    </ul>    
     <hr><b>SOFTWARE SKILLS</b><hr>
     <ol>
         <li><b>Programming Languages:</b>C,Java,Python</li>   
