--- a/new.html/hi.html
+++ b/new.html/hi.html
@@ -6,13 +6,13 @@
     <title>First HTMl</title>
 </head>
 <body>
-    <h1>good</h1>
-    <h2>good</h2>
-    <h3>good</h3>
-    <h4>good</h4>
-    <h5>good</h5>
-    <h6>good</h6>
-    <hr> --this tag is not have ending tag so it is callesd empty tag
+    <h1>Hloo</h1>
+    <h2>Welcome</h2>
+    <h3>To</h3>
+    <h4>HTML</h4>
+    <h5>Offline</h5>
+    <h6>Class</h6>
+    <hr> 
     <p><b> Hypertext Markup Language (HTML)</b> is the <strong>standard markup language,</strong> for documents designed to be displayed in a web browser.It defines the content and structure of web content. <br>
         It is often assisted by technologies such as <i>Cascading Style Sheets (CSS)</i> and <em>scripting languages</em> such as <mark>JavaScript</mark>. 
         Web browsers receive <small>Html</small> documents from a web server or from local <del>and</del> storage and render the <ins>document</ins>into multimedia web pages. 
