--- a/new.html/Resume.html
+++ b/new.html/Resume.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
+    <style>
+        b{
+            background-color:darkgray;
+        }
+    </style>
 </head>
 <body>
     <h2><center>MADDEPALLI BABYRANI</center></h2>
     <p><center>ContactNo:+91-8179709538|E-mail:babesrani024@gmail.com</center></p>
-    <hr><B>OBJECTIVE</B><hr>
+    <hr><b>OBJECTIVE</b><hr>
     <p>Looking for a challenging and high-performance-oriented role in the field of computer engineering and implementing my expertise and skills to the development of the organization.</P>
     <hr><b>EDUCATIONAL DETAILS</b><hr> 
     <ul>
@@ -36,10 +41,10 @@
     </ul>    
     <hr><b>SOFTWARE SKILLS</b><hr>
     <ol>
-        <li><b>Programming Languages:</b>C,Java,Python</li>   
-        <li><b>Web Development:</b>HTML,CSS,JavaScript</li>
-        <li><b>Database:</b>SQL</li>
-        <li><b>Basic Computers:</b>Ms-Office</li>
+        <li><strong>Programming Languages:</strong>C,Java,Python</li>   
+        <li><strong>Web Development:</strong>HTML,CSS,JavaScript</li>
+        <li><strong>Database:</strong>SQL</li>
+        <li><strong>Basic Computers:</strong>Ms-Office</li>
     </ol> 
     <hr><b>CERTIFICATIONS</b><hr>
     <ul>
@@ -58,6 +63,6 @@
     <hr><b>DECLARATION</b><hr>
     <P>I hereby declared that the facts given above are genuine to the best of my knowledge and belief. </P>
     <p>Place</p>
-    <p align="right">Signature</p>
+    <p style="text-align: right;">Signature</p>
 </body>
 </html>
