--- a/new.html/ApplicationForm.html
+++ b/new.html/ApplicationForm.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Application Form</title>
 </head>
 <body>
     <h1><center>Application Form</center></h1>
